--- a/index.html
+++ b/index.html
@@ -132,21 +132,17 @@
     <section class="jumbotron">
         <div class="container">
             <article class="markdown-body entry-content" itemprop="text">
-                <h1>IntelliJ IDEA plugin</h1>
+                <h1>IntelliJ IDEA plugin
+                    <a href="https://plugins.jetbrains.com/plugin/12064-microconfig-io">
+                        <img alt="JetBrains IntelliJ plugins" src="https://img.shields.io/jetbrains/plugin/d/12064-microconfig-io?color=%235fbb92&style=flat-square">
+                    </a>
+                </h1>
                 <p>IntelliJ IDEA plugin for Microconfig that allows navigating to #include and placeholders' sources,
                     resolving placeholders and other useful stuff.</p>
 
-                <h3>Installation</h3>
-                <p>
-                    Install plugin by name <code>Microconfig.io</code> from Idea <code>Settings -&gt; Plugins -&gt; Marketplace</code>
-                </p>
-                <p>Or download plugin zip file from
-                    <a href="https://plugins.jetbrains.com/plugin/12064-microconfig-io" rel="nofollow">https://plugins.jetbrains.com/plugin/12064-microconfig-io</a>
-                    and import it via <br> <code>Settings -&gt; Plugins -&gt; Install plugin from disk...</code>
-                </p>
-
                 <h3>Plugin usage</h3>
-                <p>Plugin adds it's submenu in <code>Main Menu -&gt; Tools -&gt; Microconfig</code>. Also the same menu appears in <code>RightClick</code> menu.
+                <p>Plugin adds it's submenu in <code>Main Menu -&gt; Tools -&gt; Microconfig</code>. Also the same menu
+                    appears in <code>RightClick</code> menu.
                 </p>
                 <p>Microconfig has two actions:</p>
                 <ul>
@@ -156,18 +152,22 @@
 
                 <h4>Jump to component</h4>
                 <p><code>Jump to component</code> supports navigation from <code>#include component</code> line.
-                    Once chosen from the menu or on the hotkey press it will try to find <code>component</code> in 'components' directory and open the corresponding file inside.
+                    Once chosen from the menu or on the hotkey press it will try to find <code>component</code> in
+                    'components' directory and open the corresponding file inside.
                 </p>
                 <p>Also it can jump to a component referenced in a placeholder like <code>${component@key}</code>.
                     To choose a placeholder just place your cursor inside <code>{}</code>.
-                    On Jump it will try to find <code>component</code> file and then a line with <code>key</code> inside it. Once found it will open that file and place cursor on <code>key</code> line.
+                    On Jump it will try to find <code>component</code> file and then a line with <code>key</code> inside
+                    it. Once found it will open that file and place cursor on <code>key</code> line.
                 </p>
 
                 <h4>Resolve placeholder</h4>
                 <p><code>Resolve placeholder</code> supports two modes.</p>
-                <p>If activated with cursor on a property' key it will try to resolve the whole property and show values grouped by env names in a small hint.
+                <p>If activated with cursor on a property' key it will try to resolve the whole property and show values
+                    grouped by env names in a small hint.
                 </p>
-                <p><img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/resolve.png" alt="resolve" style="max-width:100%;">
+                <p><img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/resolve.png"
+                        alt="resolve" style="max-width:100%;">
                 </p>
                 <p>If activated with cursor inside placeholder <code>${}</code> it will try to resolve only that
                     placeholder.
@@ -175,16 +175,28 @@
                 <h3>Config build</h3>
                 <p>You can create standard IDEA Run configuration for Microconfig to build configs with plugin.</p>
                 <p>
-                    <img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/run.png" alt="run" style="max-width:100%;">
+                    <img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/run.png" alt="run"
+                         style="max-width:100%;">
                 </p>
 
                 <h3>Configuration preview</h3>
                 <p>You can preview configuration for a component on the fly. To open preview either activate <code>
-                    Microconfig -&gt; Preview component</code> or use default hotkey (Shift-Ctrl-F10 / Shift-Command-F10).
+                    Microconfig -&gt; Preview component</code> or use default hotkey (Shift-Ctrl-F10 /
+                    Shift-Command-F10).
                     Preview window allows you to see resulting configs for different environments.
                 </p>
-                <p><img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/preview_light.png" alt="preview" style="max-width:100%;"></p>
+                <p><img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/preview_light.png"
+                        alt="preview" style="max-width:100%;"></p>
 
+                <h3>Installation</h3>
+                <p>
+                    Install plugin by name <code>Microconfig.io</code> from Idea <code>Settings -&gt; Plugins -&gt;
+                    Marketplace</code>
+                </p>
+                <p>Or download plugin zip file from
+                    <a href="https://plugins.jetbrains.com/plugin/12064-microconfig-io" rel="nofollow">https://plugins.jetbrains.com/plugin/12064-microconfig-io</a>
+                    and import it via <br> <code>Settings -&gt; Plugins -&gt; Install plugin from disk...</code>
+                </p>
                 <h1>Compatibility</h1>
                 <p>The plugin is compatible with any JetBrains IDE: IntelliJ IDEA, PhpStorm, WebStorm, PyCharm,
                     RubyMine, AppCode, CLion, GoLand, DataGrip, Rider, MPS, Android Studio
