--- a/download.html
+++ b/download.html
@@ -4,7 +4,7 @@
             <h1>Download</h1>
             <p class="lead">
                 You can download standalone Microconfig CLI from
-                <a href="https://search.maven.org/artifact/io.microconfig/microconfig-core/3.12.0/jar">Maven Central</a> or
+                <a href="https://repo1.maven.org/maven2/io/microconfig/microconfig-cli/4.0.0/microconfig-cli-4.0.0-all.jar">Maven Central</a> or
                 <a href="https://github.com/microconfig/microconfig/releases">Github releases</a>.
             </p>
             <p class="lead">
