--- a/index.html
+++ b/index.html
@@ -28,12 +28,8 @@
     <link rel="icon" href="css/favicon.ico">
 
     <link href="css/styles.css" rel="stylesheet">
+    <link href="bloggersans/bloggersans.css" rel="stylesheet">
     <style>
-        @font-face {
-            font-family: bloggerBold;
-            src: url('bloggersans/Bloggersansbold.ttf') format('truetype');
-        }
-
         code {
             color: #5fbb92;
             font-size: 90%;
@@ -102,7 +98,7 @@
         <div class="container d-flex justify-content-between">
             <a href="https://microconfig.io" class="navbar-brand d-flex align-items-center" style="padding: 0">
                 <img src="logo.svg" style="width:80px" alt="Microconfig"/>
-                <strong class="mc-color" style="font-family: bloggerBold">Microconfig</strong>
+                <strong class="mc-color" style="font-family: 'Blogger Sans'">Microconfig</strong>
             </a>
 
             <nav class="my-2 my-md-0 mr-md-3">
