--- a/index.html
+++ b/index.html
@@ -25,72 +25,9 @@
 
     <link href="bootstrap/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="icon" href="css/favicon.ico">
-
     <link href="css/styles.css" rel="stylesheet">
     <link href="bloggersans/bloggersans.css" rel="stylesheet">
-    <style>
-        code {
-            color: #5fbb92;
-            font-size: 90%;
-        }
-
-        .container {
-            padding: 0;
-        }
-
-        .shadow-sm {
-            box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .035) !important;
-        }
-
-        .navbar-brand {
-            font-size: 2.8rem;
-        }
-
-        .card-header {
-            border: 0;
-            background-color: white;
-        }
-
-        .card {
-            border: 0;
-            font-weight: 300;
-        }
-
-        .card-header {
-            padding-bottom: 0;
-        }
-
-        .bg-light {
-            background-color: #f9f9f9 !important;
-        }
-
-        .github-corner:hover .octo-arm {
-            animation: octocat-wave 560ms ease-in-out
-        }
-
-        @keyframes octocat-wave {
-            0%, 100% {
-                transform: rotate(0)
-            }
-            20%, 60% {
-                transform: rotate(-25deg)
-            }
-            40%, 80% {
-                transform: rotate(10deg)
-            }
-        }
-
-        @media (max-width: 500px) {
-            .github-corner:hover .octo-arm {
-                animation: none
-            }
-
-            .github-corner .octo-arm {
-                animation: octocat-wave 560ms ease-in-out
-            }
-        }
-    </style>
+    <link rel="icon" href="css/favicon.ico">
 </head>
 <body>
 <header>
@@ -105,7 +42,7 @@
                 <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>
                 <a class="p-2 text-dark" href="documentation.html">Documentation</a>
                 <a class="p-2 text-dark" href="download.html">Download</a>
-                <a class="p-2 text-dark" href="plugin.html">IDEA plugin</a>
+                <a class="p-2 text-dark" href="index.html">IDEA plugin</a>
                 <a class="p-2 text-dark" href="contacts.html">Contacts</a>
             </nav>
         </div>
@@ -124,7 +61,7 @@
     </svg>
 </a>
 
-<main role="main" id="main">
+<main role="main" id="quickstart">
     <section class="jumbotron">
         <div class="container">
             <h1>Microservice configuration made easy</h1>
@@ -231,6 +168,5 @@
 <script src="bootstrap/bootstrap.bundle.min.js"
         integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"></script>
 </body>
-
 
 </html>
