--- a/contacts.html
+++ b/contacts.html
@@ -39,10 +39,10 @@
             </a>
 
             <nav class="my-2 my-md-0 mr-md-3">
-                <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>
+<!--                <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>-->
                 <a class="p-2 text-dark" href="documentation.html">Documentation</a>
                 <a class="p-2 text-dark" href="download.html">Download</a>
-                <a class="p-2 text-dark" href="index.html">IDEA plugin</a>
+                <a class="p-2 text-dark" href="plugin.html">IDEA plugin</a>
                 <a class="p-2 text-dark" href="contacts.html">Contacts</a>
             </nav>
         </div>
@@ -70,85 +70,6 @@
             <p class="lead"><a href="mailto:support@microconfig.io">support@microconfig.io</a></p>
         </div>
     </section>
-
-    <div class="py-5 bg-light">
-        <div class="container" style="padding: 0; margin-bottom: 1.5rem">
-            <h2>
-                What Microconfig can do
-            </h2>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="card mb-4">
-                        <div class="card-header">
-                            <h4 class="my-0 mc-color">#Includes</h4>
-                        </div>
-                        <div class="card-body">
-                            You can extract common part for different microservices to a dedicated component and then
-                            reuse it via #include
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="card mb-4">
-                        <div class="card-header">
-                            <h4 class="my-0 mc-color">${Place@holders}</h4>
-                        </div>
-                        <div class="card-body">
-                            Instead of duplicating the value of some properties you can use a reference to this value.
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="card mb-4">
-                        <div class="card-header">
-                            <h4 class="my-0 mc-color">#{'Expression' + 'language'}</h4>
-                        </div>
-                        <div class="card-body">
-                            If #include and ${placeholders} is not enough you can use powerful expression language for
-                            dynamic properties
-                            <br><br>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="card mb-4">
-                        <div class="card-header">
-                            <h4 class="my-0 mc-color">Environment specific configs</h4>
-                        </div>
-                        <div class="card-body">
-                            For each microservice you can write common configuration for all environment and specify
-                            environment specific properties (add/remove/override).
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="card mb-4">
-                        <div class="card-header">
-                            <h4 class="my-0 mc-color">Templates</h4>
-                        </div>
-                        <div class="card-body">
-                            Microconfig allows you to keep configuration files for any libraries in their specific
-                            format and resolve placeholders inside them.
-                            <br><br>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="card mb-4">
-                        <div class="card-header">
-                            <h4 class="my-0 mc-color">Config diff</h4>
-                        </div>
-                        <div class="card-body">
-                            Microconfig can detect added/removed/changed properties for each service and store this information after every config build.
-                            <br><br>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 </main>
 
 <footer class="text-muted">
