--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             </a>
 
             <nav class="my-2 my-md-0 mr-md-3">
-                <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>
+<!--                <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>-->
                 <a class="p-2 text-dark" href="documentation.html">Documentation</a>
                 <a class="p-2 text-dark" href="download.html">Download</a>
-                <a class="p-2 text-dark" href="index.html">IDEA plugin</a>
+                <a class="p-2 text-dark" href="plugin.html">IDEA plugin</a>
                 <a class="p-2 text-dark" href="contacts.html">Contacts</a>
             </nav>
         </div>
