--- a/quickstart.html
+++ b/quickstart.html
@@ -21,7 +21,7 @@
     <meta content="configuration management, configuration framework, external configuration, configuration best practices, java configuration, microservice configuration, microservice configs, config, configuration"
           name="keywords">
     <meta content="Microconfig - Microservice configuration made easy" name="description">
-    <title>Microconfig.io - modern tool for microservice configuration management</title>
+    <title>Microconfig.io - best tool for microservice configuration management</title>
 
     <link href="bootstrap/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -39,7 +39,7 @@
             </a>
 
             <nav class="my-2 my-md-0 mr-md-3">
-<!--                <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>-->
+                <!--                <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>-->
                 <a class="p-2 text-dark" href="documentation.html">Documentation</a>
                 <a class="p-2 text-dark" href="download.html">Download</a>
                 <a class="p-2 text-dark" href="plugin.html">IDEA plugin</a>
@@ -85,7 +85,9 @@
                 <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-header">
-                            <h4 class="my-0 mc-color">#Includes</h4>
+                            <h4 class="my-0 mc-color">
+                                <a href="documentation.html#/?id=better-config-structure-using-include">#Includes</a>
+                            </h4>
                         </div>
                         <div class="card-body">
                             You can extract common part for different microservices to a dedicated component and then
@@ -96,7 +98,9 @@
                 <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-header">
-                            <h4 class="my-0 mc-color">${Place@holders}</h4>
+                            <h4 class="my-0 mc-color">
+                                <a href="documentation.html#/?id=placeholders">${Place@holders}</a>
+                            </h4>
                         </div>
                         <div class="card-body">
                             Instead of duplicating the value of some properties you can use a reference to this value.
@@ -106,7 +110,9 @@
                 <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-header">
-                            <h4 class="my-0 mc-color">#{'Expression' + 'language'}</h4>
+                            <h4 class="my-0 mc-color">
+                                <a href="documentation.html#/?id=expression-language">#{'Expression' + 'language'}</a>
+                            </h4>
                         </div>
                         <div class="card-body">
                             If #include and ${placeholders} is not enough you can use powerful expression language for
@@ -118,7 +124,9 @@
                 <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-header">
-                            <h4 class="my-0 mc-color">Environment specific configs</h4>
+                            <h4 class="my-0 mc-color">
+                                <a href="documentation.html#/?id=environment-specific-properties">Environment specific configs</a>
+                            </h4>
                         </div>
                         <div class="card-body">
                             For each microservice you can write common configuration for all environment and specify
@@ -129,7 +137,9 @@
                 <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-header">
-                            <h4 class="my-0 mc-color">Templates</h4>
+                            <h4 class="my-0 mc-color">
+                                <a href="documentation.html#/?id=template-files">Templates</a>
+                            </h4>
                         </div>
                         <div class="card-body">
                             Microconfig allows you to keep configuration files for any libraries in their specific
@@ -141,7 +151,9 @@
                 <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-header">
-                            <h4 class="my-0 mc-color">Config diff</h4>
+                            <h4 class="my-0 mc-color">
+                                <a href="documentation.html#/?id=viewing-differences-between-config-versions">Config diff</a>
+                            </h4>
                         </div>
                         <div class="card-body">
                             Microconfig can detect added/removed/changed properties for each service and store this
