--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
                 <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-header">
-                            <h4 class="my-0 mc-color">#Includes</h4>
+                            <h4 class="my-0 mc-color">
+                                <a href="documentation.html#/?id=better-config-structure-using-include">#Includes</a>
+                            </h4>
                         </div>
                         <div class="card-body">
                             You can extract common part for different microservices to a dedicated component and then
@@ -96,7 +98,9 @@
                 <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-header">
-                            <h4 class="my-0 mc-color">${Place@holders}</h4>
+                            <h4 class="my-0 mc-color">
+                                <a href="documentation.html#/?id=placeholders">${Place@holders}</a>
+                            </h4>
                         </div>
                         <div class="card-body">
                             Instead of duplicating the value of some properties you can use a reference to this value.
@@ -106,7 +110,9 @@
                 <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-header">
-                            <h4 class="my-0 mc-color">#{'Expression' + 'language'}</h4>
+                            <h4 class="my-0 mc-color">
+                                <a href="documentation.html#/?id=expression-language">#{'Expression' + 'language'}</a>
+                            </h4>
                         </div>
                         <div class="card-body">
                             If #include and ${placeholders} is not enough you can use powerful expression language for
@@ -118,7 +124,9 @@
                 <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-header">
-                            <h4 class="my-0 mc-color">Environment specific configs</h4>
+                            <h4 class="my-0 mc-color">
+                                <a href="documentation.html#/?id=environment-specific-properties">Environment specific configs</a>
+                            </h4>
                         </div>
                         <div class="card-body">
                             For each microservice you can write common configuration for all environment and specify
@@ -129,7 +137,9 @@
                 <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-header">
-                            <h4 class="my-0 mc-color">Templates</h4>
+                            <h4 class="my-0 mc-color">
+                                <a href="documentation.html#/?id=template-files">Templates</a>
+                            </h4>
                         </div>
                         <div class="card-body">
                             Microconfig allows you to keep configuration files for any libraries in their specific
@@ -141,7 +151,9 @@
                 <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-header">
-                            <h4 class="my-0 mc-color">Config diff</h4>
+                            <h4 class="my-0 mc-color">
+                                <a href="documentation.html#/?id=viewing-differences-between-config-versions">Config diff</a>
+                            </h4>
                         </div>
                         <div class="card-body">
                             Microconfig can detect added/removed/changed properties for each service and store this
