--- a/plugin.html
+++ b/plugin.html
@@ -127,7 +127,7 @@
                     Marketplace</code>
                 </p>
                 <p>Or download plugin zip file from
-                    <a href="https://plugins.jetbrains.com/plugin/12064-microconfig-io" rel="nofollow">https://plugins.jetbrains.com/plugin/12064-microconfig-io</a>
+                    <a href="https://plugins.jetbrains.com/plugin/12064-microconfig-io" rel="nofollow">Jetbrains Plugin repository</a>
                     and import it via <br> <code>Settings -&gt; Plugins -&gt; Install plugin from disk...</code>
                 </p>
                 <h3>Compatibility</h3>
