--- a/download.html
+++ b/download.html
@@ -71,7 +71,7 @@
                 <a href="https://github.com/microconfig/microconfig/releases">Github releases</a>.
             </p>
             <p class="lead">
-                If you want to add Microconfig-core as dependency to your Java project
+                If you want to add Microconfig-core as dependency to your Java project use
                 <a href="https://search.maven.org/artifact/io.microconfig/microconfig-core/3.12.0/jar">this Maven artifact</a>.
             </p>
 
