--- a/download.html
+++ b/download.html
@@ -39,7 +39,7 @@
             </a>
 
             <nav class="my-2 my-md-0 mr-md-3">
-<!--                <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>-->
+                <!--                <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>-->
                 <a class="p-2 text-dark" href="documentation.html">Documentation</a>
                 <a class="p-2 text-dark" href="download.html">Download</a>
                 <a class="p-2 text-dark" href="plugin.html">IDEA plugin</a>
@@ -67,17 +67,20 @@
             <h1>Download</h1>
             <p class="lead">
                 You can download standalone Microconfig CLI from
-                <a href="https://repo1.maven.org/maven2/io/microconfig/microconfig-cli/4.0.0/microconfig-cli-4.0.0-all.jar">Maven Central</a> or
+                <a href="https://repo1.maven.org/maven2/io/microconfig/microconfig-cli/4.0.0/microconfig-cli-4.0.0-all.jar">Maven
+                    Central</a> or
                 <a href="https://github.com/microconfig/microconfig/releases">Github releases</a>.
             </p>
             <p class="lead">
                 If you want to add Microconfig-core as dependency to your Java project use
-                <a href="https://search.maven.org/artifact/io.microconfig/microconfig-core/3.12.0/jar">this Maven artifact</a>.
+                <a href="https://search.maven.org/artifact/io.microconfig/microconfig-core/3.12.0/jar">this Maven
+                    artifact</a>.
             </p>
 
             <p class="lead">
                 See documentation how to
-                <a href="http://localhost:63342/site/documentation.html#/?id=running-the-config-build">run config build via CLI</a>.
+                <a href="http://localhost:63342/site/documentation.html#/?id=running-the-config-build">run config build
+                    via CLI</a>.
             </p>
         </div>
     </section>
@@ -85,7 +88,7 @@
 </main>
 
 <footer class="text-muted">
-    <div class="container">
+    <div class="container" style="padding: 15px">
         Microconfig.io © 2017-2020
     </div>
 </footer>
