--- a/contacts.html
+++ b/contacts.html
@@ -73,7 +73,7 @@
 </main>
 
 <footer class="text-muted">
-    <div class="container">
+    <div class="container" style="padding: 15px">
         Microconfig.io © 2017-2020
     </div>
 </footer>
