--- a/plugin.html
+++ b/plugin.html
@@ -140,7 +140,7 @@
 </main>
 
 <footer class="text-muted">
-    <div class="container">
+    <div class="container" style="padding: 15px">
         Microconfig.io © 2017-2020
     </div>
 </footer>
