--- a/download.html
+++ b/download.html
@@ -88,7 +88,7 @@
 </main>
 
 <footer class="text-muted">
-    <div class="container">
+    <div class="container" style="padding: 10px">
         Microconfig.io © 2017-2020
     </div>
 </footer>
