--- a/documentation.html
+++ b/documentation.html
@@ -42,6 +42,10 @@
         .markdown-section p {
             line-height: 1.5;
         }
+
+        .markdown-section {
+            padding: 0;
+        }
     </style>
 </head>
 <body>
