--- a/documentation.html
+++ b/documentation.html
@@ -39,7 +39,7 @@
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
         }
 
-        .markdown-section p, ul {
+        .markdown-section p, .markdown-section ul {
             line-height: 1.5;
         }
 
