--- a/documentation.html
+++ b/documentation.html
@@ -57,7 +57,8 @@
         homepage: 'https://raw.githubusercontent.com/microconfig/microconfig/master/README.md',
         repo: 'https://github.com/microconfig/microconfig',
         noEmoji: true,
-        logo: './logo.svg'
+        logo: './logo.svg',
+        nameLink: "http://microconfig.io",
     }
 </script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
