--- a/documentation.html
+++ b/documentation.html
@@ -58,7 +58,7 @@
         repo: 'https://github.com/microconfig/microconfig',
         noEmoji: true,
         logo: './logo.svg',
-        nameLink: "http://microconfig.io",
+        nameLink: "https://microconfig.io",
     }
 </script>
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
