--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             </h4>
                         </div>
                         <div class="card-body">
-                            For each microservice you can write common configuration for all environment and specify
+                            For each microservice you can write common configuration for all environments and also
                             environment specific properties (add/remove/override).
                         </div>
                     </div>
