--- a/download.html
+++ b/download.html
@@ -79,7 +79,7 @@
 
             <p class="lead">
                 See documentation how to
-                <a href="http://localhost:63342/site/documentation.html#/?id=running-the-config-build">run config build
+                <a href="documentation.html#/?id=running-the-config-build">run config build
                     via CLI</a>.
             </p>
         </div>
