--- a/index.html
+++ b/index.html
@@ -66,10 +66,13 @@
         <div class="container">
             <h1>Microservice configuration made easy</h1>
             <p class="lead ">
-                <br>Configure common and specific parts for different microservices or for the same microservice on
-                different environments <b>WITHOUT COPY&PASTE</b>.
-                <br><br>Use placeholders and powerful expression language for dynamic properties.
-                <br><br>Support yaml and properties format.
+                Microservice architecture implies a lot of similar small services with a similar configuration.<br>
+                Each of those services has an application config, deployment config, a log template, etc.<br><br>
+                Multiply that by 50 services across 5 different environments and you have a giant mess.<br><br>
+                Monoliths on the other hand have a giant configuration files that configure all components together making it hard to understand. Editing configuration becomes error prone.<br><br>
+
+                Use Microconfig's easy but powerful syntax to reuse common config parts, make environment specific overrides, calculate dynamic values and have different types of configuration working together.<br><br>
+                Microconfig allows you to focus on things that matter most.
             </p>
         </div>
     </section>
