--- a/documentation.html
+++ b/documentation.html
@@ -43,6 +43,10 @@
             line-height: 1.5;
         }
 
+        .anchor span {
+            color: black;
+        }
+
         .markdown-section {
             padding: 0;
             max-width: 90%;
