--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </a>
 
             <nav class="my-2 my-md-0 mr-md-3">
-<!--                <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>-->
+                <!--                <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>-->
                 <a class="p-2 text-dark" href="documentation.html">Documentation</a>
                 <a class="p-2 text-dark" href="plugin.html">IDEA plugin</a>
                 <a class="p-2 text-dark" href="download.html">Download</a>
@@ -64,14 +64,18 @@
 <main role="main" id="quickstart">
     <section class="jumbotron">
         <div class="container">
-            <h1>Microservice configuration made easy</h1>
-            <p class="lead ">
+            <h1>Microservice Configuration
+                <br><span style="font-weight: bold;">Made Easy</span>
+            </h1>
+            <p class="lead" style="margin-top: 1em">
                 Microservice architecture implies a lot of similar small services with a similar configuration.<br>
                 Each of those services has an application config, deployment config, a log template, etc.<br><br>
                 Multiply that by 50 services across 5 different environments and you have a giant mess.<br><br>
-                Monoliths on the other hand have a giant configuration files that configure all components together making it hard to understand. Editing configuration becomes error prone.<br><br>
+                Monoliths on the other hand have a giant configuration files that configure all components together
+                making it hard to understand. Editing configuration becomes error prone.<br><br>
 
-                Use Microconfig's easy but powerful syntax to reuse common config parts, make environment specific overrides, calculate dynamic values and have different types of configuration working together.<br><br>
+                Use Microconfig's easy but powerful syntax to reuse common config parts, make environment specific
+                overrides, calculate dynamic values and have different types of configuration working together.<br><br>
                 Microconfig allows you to focus on things that matter most.
             </p>
         </div>
@@ -128,7 +132,8 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="documentation.html#/?id=environment-specific-properties">Environment specific configs</a>
+                                <a href="documentation.html#/?id=environment-specific-properties">Environment specific
+                                    configs</a>
                             </h4>
                         </div>
                         <div class="card-body">
@@ -155,7 +160,8 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="documentation.html#/?id=viewing-differences-between-config-versions">Config diff</a>
+                                <a href="documentation.html#/?id=viewing-differences-between-config-versions">Config
+                                    diff</a>
                             </h4>
                         </div>
                         <div class="card-body">
