--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <br><span style="font-weight: bold;">Made Easy</span>
             </h1>
             <p class="lead" style="margin-top: 1em">
-                Microservice architecture implies a lot of similar small services with a similar configuration.<br>
+                Microservice architecture implies a lot of similar small services with similar configuration.<br>
                 Each of those services has an application config, deployment config, a log template, etc.<br><br>
                 Multiply that by 50 services across 5 different environments and you have a giant mess.<br><br>
                 Monoliths on the other hand have a giant configuration files that configure all components together
