--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                 Use Microconfig's easy but powerful syntax to reuse common config parts, make environment specific
                 overrides, calculate dynamic values and have different types of configuration working together.<br><br>
-                Microconfig allows you to focus on things that matter most.
+                Forget about copy&paste configuration problems.
             </p>
         </div>
     </section>
