--- a/index.html
+++ b/index.html
@@ -70,13 +70,11 @@
             <p class="lead" style="margin-top: 1em">
                 Microservice architecture implies a lot of similar small services with similar configuration.<br>
                 Each service has an application config, deployment config, a log template, etc.<br><br>
-                Multiply that by 50 services across 5 different environments and you have a mess.<br><br>
-                Monoliths on the other hand have a giant configuration files that configure all components together
-                making it hard to understand. Editing configuration becomes error prone.<br><br>
+                Multiply that by 50 services across 5 different environments, use Copy&Paste "pattern" and you have a mess.<br>
+                Editing configuration becomes error prone.<br><br>
 
-                Use Microconfig's easy but powerful syntax to reuse common config parts, make environment specific
+                Microconfig offers easy but powerful syntax to reuse common config parts, make environment specific
                 overrides, calculate dynamic values and have different types of configuration working together.<br><br>
-                Forget about copy&paste configuration problems.
             </p>
         </div>
     </section>
