--- a/index.html
+++ b/index.html
@@ -64,17 +64,14 @@
 <main role="main" id="quickstart">
     <section class="jumbotron">
         <div class="container">
-            <h1>Microservice Configuration
-                <br><span style="font-weight: bold;">Made Easy</span>
+            <h1>Remove configuration copy&paste and
+                <br><span style="font-weight: bold;">focus on things that matter</span>
             </h1>
             <p class="lead" style="margin-top: 1em">
                 Microservice architecture implies a lot of similar small services with similar configuration.<br>
                 Each service has an application config, deployment config, a log template, etc.<br><br>
                 Multiply that by 50 services across 5 different environments, use Copy&Paste "pattern" and you have a mess.<br>
                 Editing configuration becomes error prone.<br><br>
-
-                Microconfig offers easy but powerful syntax to reuse common config parts, make environment specific
-                overrides, calculate dynamic values and have different types of configuration working together.<br><br>
             </p>
         </div>
     </section>
@@ -82,7 +79,7 @@
     <div class="py-5 bg-light">
         <div class="container" style="padding: 0; margin-bottom: 1.5rem">
             <h2>
-                What Microconfig can do
+                What Microconfig can offer
             </h2>
         </div>
         <div class="container">
