--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 <main role="main" id="quickstart">
     <section class="jumbotron">
         <div class="container">
-            <h1>Remove configuration copy&paste and
+            <h1>Remove copy&paste and
                 <br><span style="font-weight: bold;">focus on things that matter</span>
             </h1>
             <p class="lead" style="margin-top: 1em">
-                Microservice architecture implies a lot of similar small services with similar configuration.<br>
+                Microservice architecture implies a lot of services with similar configuration.<br>
                 Each service has an application config, deployment config, a log template, etc.<br><br>
                 Multiply that by 50 services across 5 different environments, use Copy&Paste "pattern" and you have a mess.<br>
                 Editing configuration becomes error prone.<br><br>
