--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <p class="lead" style="margin-top: 2em">
                 Microservice architecture implies a lot of services with similar configuration.<br>
                 Each service has an application config, deployment config, a log template and so on.<br>
-                Multiply that by 50 services across 5 different environments and you have a mess.<br>
+                Multiply that by 50 services with 5 different environments and you have a mess.<br>
             </p>
         </div>
     </section>
